--- a/app/elements/logis/sms-control.html
+++ b/app/elements/logis/sms-control.html
@@ -212,6 +212,8 @@
         });
         data['r-chute-info'] = rChuteInfo;
         data['l-chute-info'] = lChuteINfo;
+        data['from-chute-cell-info'] = [];
+        data['to-chute-cell-info'] = [];
         this.scene.data = data;
       },
 
