--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -8,6 +8,7 @@
 <link rel="import" href="./gw-ind.html" />
 <link rel="import" href="./invoice-no.html" />
 <link rel="import" href="./job-batch.html" />
+<link rel="import" href="./das-job-batch.html" />
 <link rel="import" href="./das-preprocess.html" />
 <link rel="import" href="./sms-preprocess.html" />
 <link rel="import" href="./sms-control.html" />
